# clang_cg

./: .gitignore  CMakeLists.txt  README.md  YAMLCallGraphPass.cpp
test/: CMakeLists.txt  greeting_and_farewell.c  run_callgraph_analysis.sh
